Refactor code + removed DB code